--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <h1>WordPress part-02</h1>
-    <a href="./class_video/class_113_wordpress_part_02.mp4">Download Class Video</a>
+    <a href="./class_video/class_113_wordpress_part_02.mp4">Watch Class Video</a>
   </div>
 </body>
 </html>
