--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <h1>WordPress part-02</h1>
-    <a href="embed.html">Watch Class Video</a>
+    <a href="https://www.youtube.com/watch?v=OUIwZ1z-r3E">Watch Class Video</a>
   </div>
 </body>
 </html>
